<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RadioGroup
            android:id="@+id/rg_download_options"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">
            <RadioButton
                android:id="@+id/rd_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/glide_option" />

            <RadioButton
                android:id="@+id/rd_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/loadApp_option" />

            <RadioButton
                android:id="@+id/rd_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/retrofit_option" />
        </RadioGroup>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>